• Added snippets for common modifiers and constructs.
Instead of trying to make super flexible snippets that cover all modifiers for given constructs, we separate modifers from the constructs to enable sequences like the following…

fi⇥ab⇥pu⇥m⇥

Which becomes…

final abstract public void method() throws … {}

git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9391 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -12,13 +12,40 @@
 	<string>A bundle for the &lt;a href="http://java.sun.com/"&gt;Java&lt;/a&gt; programming language.</string>
 	<key>mainMenu</key>
 	<dict>
-		<key>excludedItems</key>
-		<array>
-		</array>
 		<key>items</key>
-		<array/>
+		<array>
+			<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
+			<string>------------------------------------</string>
+			<string>9EDF163F-3AB5-4FB5-90CD-DBE38005D082</string>
+			<string>94F55660-EB8B-49FE-BF82-56ACC0A5DDD2</string>
+		</array>
 		<key>submenus</key>
 		<dict>
+			<key>94F55660-EB8B-49FE-BF82-56ACC0A5DDD2</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
+					<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
+					<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
+				</array>
+				<key>name</key>
+				<string>Constructs</string>
+			</dict>
+			<key>9EDF163F-3AB5-4FB5-90CD-DBE38005D082</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
+					<string>56C938B4-22B8-45F4-8E09-5BB4DE4633B0</string>
+					<string>8E765795-CC9D-46D7-8602-7E2DBB7026B2</string>
+					<string>C0525A43-EEF4-4F59-AC09-84D263888433</string>
+					<string>F53E8BF9-4911-4131-B31F-8B4DEE47E421</string>
+					<string>E54D7A3C-107A-426E-91E8-D066A978BC5E</string>
+				</array>
+				<key>name</key>
+				<string>Modifiers</string>
+			</dict>
 		</dict>
 	</dict>
 	<key>name</key>
@@ -28,6 +55,15 @@
 		<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
 		<string>2A28E50A-6B1D-11D9-8689-000D93589AF6</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
+		<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
+		<string>56C938B4-22B8-45F4-8E09-5BB4DE4633B0</string>
+		<string>8E765795-CC9D-46D7-8602-7E2DBB7026B2</string>
+		<string>C0525A43-EEF4-4F59-AC09-84D263888433</string>
+		<string>F53E8BF9-4911-4131-B31F-8B4DEE47E421</string>
+		<string>E54D7A3C-107A-426E-91E8-D066A978BC5E</string>
+		<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
+		<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
+		<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
 		<string>FBA964F9-EA31-44D1-A5FD-AE8AB3FF8954</string>
 		<string>20E93106-18CF-4BA3-9DA3-8F0C955DB774</string>
 		<string>FA4CD3FA-A79B-43E3-A432-DA53DA4A060D</string>
