• Simplification of the class dec/def matching.
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9392 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -263,7 +263,7 @@
 		<key>class</key>
 		<dict>
 			<key>begin</key>
-			<string>(?=(?:[^\s]*)|(?:\s*)(?:class|(?:@)?interface)\s+\w+)</string>
+			<string>(?=[^=;]*(?:class|(?:@)?interface)\s+\w+)</string>
 			<key>beginCaptures</key>
 			<dict>
 				<key>1</key>
