• Smarten package and import matches so they give better feedback while still typing the statement.
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9398 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -41,7 +41,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>^\s*(package)\s+([^ ;]+?)(;)$\n</string>
+			<string>^\s*(package)\b(?:\s*([^ ;$]+)\s*(;)?$\n?)?</string>
 			<key>name</key>
 			<string>meta.package.java</string>
 		</dict>
@@ -65,7 +65,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>^\s*(import)\s+([^ ;$]+)(;)?$\n</string>
+			<string>^\s*(import)\b(?:\s*([^ ;$]+)\s*(;)?$\n?)?</string>
 			<key>name</key>
 			<string>meta.import.java</string>
 		</dict>
