--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -437,6 +437,10 @@
 				</dict>
 				<dict>
 					<key>include</key>
+					<string>#storage-modifiers</string>
+				</dict>
+				<dict>
+					<key>include</key>
 					<string>#strings</string>
 				</dict>
 				<dict>
@@ -625,7 +629,7 @@
 		<key>methods</key>
 		<dict>
 			<key>begin</key>
-			<string>(?:^|;)(?!.*//)(?!.*=)(?=.*\()</string>
+			<string>(?=\w)(?!.*;)(?!.*//)(?!.*=)(?=.*\()</string>
 			<key>beginCaptures</key>
 			<dict>
 				<key>1</key>
@@ -874,7 +878,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>\s*\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b</string>
+			<string>\b(public|private|protected|static|final|native|synchronized|abstract|threadsafe|transient)\b</string>
 		</dict>
 		<key>strings</key>
 		<dict>
