--- a/info.plist
+++ b/info.plist
@@ -18,6 +18,9 @@
 			<string>------------------------------------</string>
 			<string>9EDF163F-3AB5-4FB5-90CD-DBE38005D082</string>
 			<string>94F55660-EB8B-49FE-BF82-56ACC0A5DDD2</string>
+			<string>FA8BC93C-87AC-4E8D-A1A8-30E22436C874</string>
+			<string>DED2BA05-B4E1-4400-B3D5-974C7066F250</string>
+			<string>D7ED7C3F-23D8-4891-A319-B85727972BC2</string>
 		</array>
 		<key>submenus</key>
 		<dict>
@@ -39,12 +42,56 @@
 					<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
 					<string>56C938B4-22B8-45F4-8E09-5BB4DE4633B0</string>
 					<string>8E765795-CC9D-46D7-8602-7E2DBB7026B2</string>
+					<string>------------------------------------</string>
 					<string>C0525A43-EEF4-4F59-AC09-84D263888433</string>
 					<string>F53E8BF9-4911-4131-B31F-8B4DEE47E421</string>
+					<string>------------------------------------</string>
 					<string>E54D7A3C-107A-426E-91E8-D066A978BC5E</string>
 				</array>
 				<key>name</key>
 				<string>Modifiers</string>
+			</dict>
+			<key>D7ED7C3F-23D8-4891-A319-B85727972BC2</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>97DC6637-998E-493C-9765-C8CFB29AC18C</string>
+					<string>2887D1D3-A714-41B6-9211-4DEC12417889</string>
+				</array>
+				<key>name</key>
+				<string>Common Packages</string>
+			</dict>
+			<key>DED2BA05-B4E1-4400-B3D5-974C7066F250</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>097F4236-D7A4-412F-A078-11ABFCAFC7BA</string>
+					<string>96251D07-2F30-4610-9F0F-65DE730CC0B5</string>
+				</array>
+				<key>name</key>
+				<string>Directives</string>
+			</dict>
+			<key>FA8BC93C-87AC-4E8D-A1A8-30E22436C874</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>476E26EB-5A53-45B3-A497-B22B12815C7F</string>
+					<string>5A7786EE-5F23-422E-A6EC-69778ED7C8FC</string>
+					<string>4C07C9CB-4306-417B-B152-653E93C987B5</string>
+					<string>------------------------------------</string>
+					<string>755B1EB0-934C-49C6-AD08-B461C2205C46</string>
+					<string>BC9380F7-43F1-4304-91CD-4C490B0A6037</string>
+					<string>8B84EAD3-F93D-407A-8BB1-4FEF8B0C71D7</string>
+					<string>------------------------------------</string>
+					<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
+					<string>------------------------------------</string>
+					<string>2D2F53B7-E41C-4AEE-8A5E-2A5BB7B42E65</string>
+					<string>7396532C-3567-4BDA-9C10-51454A2F2F6D</string>
+					<string>E4DACBFB-F029-4EC3-BB0D-BEF0D5369DA7</string>
+					<string>F050CAEB-56AB-40A7-846B-E5DB70FA0A90</string>
+				</array>
+				<key>name</key>
+				<string>Control</string>
 			</dict>
 		</dict>
 	</dict>
@@ -64,6 +111,21 @@
 		<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
 		<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
 		<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
+		<string>476E26EB-5A53-45B3-A497-B22B12815C7F</string>
+		<string>5A7786EE-5F23-422E-A6EC-69778ED7C8FC</string>
+		<string>4C07C9CB-4306-417B-B152-653E93C987B5</string>
+		<string>755B1EB0-934C-49C6-AD08-B461C2205C46</string>
+		<string>BC9380F7-43F1-4304-91CD-4C490B0A6037</string>
+		<string>8B84EAD3-F93D-407A-8BB1-4FEF8B0C71D7</string>
+		<string>2D2F53B7-E41C-4AEE-8A5E-2A5BB7B42E65</string>
+		<string>7396532C-3567-4BDA-9C10-51454A2F2F6D</string>
+		<string>E4DACBFB-F029-4EC3-BB0D-BEF0D5369DA7</string>
+		<string>F050CAEB-56AB-40A7-846B-E5DB70FA0A90</string>
+		<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
+		<string>96251D07-2F30-4610-9F0F-65DE730CC0B5</string>
+		<string>097F4236-D7A4-412F-A078-11ABFCAFC7BA</string>
+		<string>97DC6637-998E-493C-9765-C8CFB29AC18C</string>
+		<string>2887D1D3-A714-41B6-9211-4DEC12417889</string>
 		<string>FBA964F9-EA31-44D1-A5FD-AE8AB3FF8954</string>
 		<string>20E93106-18CF-4BA3-9DA3-8F0C955DB774</string>
 		<string>FA4CD3FA-A79B-43E3-A432-DA53DA4A060D</string>
