• Scope method return types properly
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9408 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -673,7 +673,7 @@
 				</dict>
 				<dict>
 					<key>begin</key>
-					<string>(?=.+\()</string>
+					<string>(?=\w.*\s+\w+\s*\()</string>
 					<key>end</key>
 					<string>(?=\w+\s*\()</string>
 					<key>name</key>
