--- a/info.plist
+++ b/info.plist
@@ -21,9 +21,22 @@
 			<string>FA8BC93C-87AC-4E8D-A1A8-30E22436C874</string>
 			<string>DED2BA05-B4E1-4400-B3D5-974C7066F250</string>
 			<string>D7ED7C3F-23D8-4891-A319-B85727972BC2</string>
+			<string>29291A56-4B10-4072-95B0-44FDB81B5669</string>
 		</array>
 		<key>submenus</key>
 		<dict>
+			<key>29291A56-4B10-4072-95B0-44FDB81B5669</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>D3D659F5-5318-4D0A-85E2-9A03902A1668</string>
+					<string>8B285F69-5A6A-46B4-BB31-B5F10DCB5719</string>
+					<string>------------------------------------</string>
+					<string>D8E7B79D-ADEC-437D-BFDE-F20D5362D892</string>
+				</array>
+				<key>name</key>
+				<string>Testing</string>
+			</dict>
 			<key>94F55660-EB8B-49FE-BF82-56ACC0A5DDD2</key>
 			<dict>
 				<key>items</key>
@@ -57,6 +70,9 @@
 				<array>
 					<string>97DC6637-998E-493C-9765-C8CFB29AC18C</string>
 					<string>2887D1D3-A714-41B6-9211-4DEC12417889</string>
+					<string>5EEDE297-9489-41C8-A7AF-BDB5EABEF41F</string>
+					<string>94C09B88-AC93-4045-86D1-206639D582D0</string>
+					<string>592F2823-7A2B-4881-99A4-7A18D3623902</string>
 				</array>
 				<key>name</key>
 				<string>Common Packages</string>
@@ -89,6 +105,9 @@
 					<string>7396532C-3567-4BDA-9C10-51454A2F2F6D</string>
 					<string>E4DACBFB-F029-4EC3-BB0D-BEF0D5369DA7</string>
 					<string>F050CAEB-56AB-40A7-846B-E5DB70FA0A90</string>
+					<string>------------------------------------</string>
+					<string>3DF1A808-53F2-4F48-BD56-1F2D20A0BFE5</string>
+					<string>CE7A14F3-025B-4334-8F40-881CF820A9EE</string>
 				</array>
 				<key>name</key>
 				<string>Control</string>
@@ -124,11 +143,19 @@
 		<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
 		<string>96251D07-2F30-4610-9F0F-65DE730CC0B5</string>
 		<string>097F4236-D7A4-412F-A078-11ABFCAFC7BA</string>
+		<string>D3D659F5-5318-4D0A-85E2-9A03902A1668</string>
+		<string>8B285F69-5A6A-46B4-BB31-B5F10DCB5719</string>
+		<string>D8E7B79D-ADEC-437D-BFDE-F20D5362D892</string>
 		<string>97DC6637-998E-493C-9765-C8CFB29AC18C</string>
 		<string>2887D1D3-A714-41B6-9211-4DEC12417889</string>
+		<string>5EEDE297-9489-41C8-A7AF-BDB5EABEF41F</string>
+		<string>94C09B88-AC93-4045-86D1-206639D582D0</string>
+		<string>592F2823-7A2B-4881-99A4-7A18D3623902</string>
 		<string>FBA964F9-EA31-44D1-A5FD-AE8AB3FF8954</string>
 		<string>20E93106-18CF-4BA3-9DA3-8F0C955DB774</string>
 		<string>FA4CD3FA-A79B-43E3-A432-DA53DA4A060D</string>
+		<string>3DF1A808-53F2-4F48-BD56-1F2D20A0BFE5</string>
+		<string>CE7A14F3-025B-4334-8F40-881CF820A9EE</string>
 	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
