• First cut at a scriptmate for single java files.
May prove to be problematic as it stores compiled class files in a dir in /tmp.

git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9417 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -120,6 +120,8 @@
 	<array>
 		<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
 		<string>2A28E50A-6B1D-11D9-8689-000D93589AF6</string>
+		<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
+		<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 		<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
 		<string>56C938B4-22B8-45F4-8E09-5BB4DE4633B0</string>
