--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,9 @@
 	<dict>
 		<key>items</key>
 		<array>
+			<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
+			<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
+			<string>------------------------------------</string>
 			<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 			<string>------------------------------------</string>
 			<string>9EDF163F-3AB5-4FB5-90CD-DBE38005D082</string>
