--- a/info.plist
+++ b/info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
@@ -102,6 +102,7 @@
 					<string>BC9380F7-43F1-4304-91CD-4C490B0A6037</string>
 					<string>8B84EAD3-F93D-407A-8BB1-4FEF8B0C71D7</string>
 					<string>------------------------------------</string>
+					<string>F0C15D98-790E-4755-A04E-B8903D50F5C6</string>
 					<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
 					<string>------------------------------------</string>
 					<string>2D2F53B7-E41C-4AEE-8A5E-2A5BB7B42E65</string>
@@ -146,6 +147,7 @@
 		<string>E4DACBFB-F029-4EC3-BB0D-BEF0D5369DA7</string>
 		<string>F050CAEB-56AB-40A7-846B-E5DB70FA0A90</string>
 		<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
+		<string>F0C15D98-790E-4755-A04E-B8903D50F5C6</string>
 		<string>96251D07-2F30-4610-9F0F-65DE730CC0B5</string>
 		<string>097F4236-D7A4-412F-A078-11ABFCAFC7BA</string>
 		<string>D3D659F5-5318-4D0A-85E2-9A03902A1668</string>
