--- a/info.plist
+++ b/info.plist
@@ -46,7 +46,10 @@
 				<array>
 					<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
 					<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
+					<string>------------------------------------</string>
 					<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
+					<string>8CD02FE6-B5EE-4335-AFDF-7CC02C969563</string>
+					<string>4876099F-502E-471F-9D0D-916C7EF2E353</string>
 				</array>
 				<key>name</key>
 				<string>Constructs</string>
@@ -136,6 +139,8 @@
 		<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
 		<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
 		<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
+		<string>8CD02FE6-B5EE-4335-AFDF-7CC02C969563</string>
+		<string>4876099F-502E-471F-9D0D-916C7EF2E353</string>
 		<string>476E26EB-5A53-45B3-A497-B22B12815C7F</string>
 		<string>5A7786EE-5F23-422E-A6EC-69778ED7C8FC</string>
 		<string>4C07C9CB-4306-417B-B152-653E93C987B5</string>
