• Parens in constructor arguments were prematurely ending match for constructor args. Solution is to match nested parens in args.
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@9548 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -247,6 +247,19 @@
 							<key>include</key>
 							<string>#code</string>
 						</dict>
+						<dict>
+							<key>begin</key>
+							<string>\(</string>
+							<key>end</key>
+							<string>\)</string>
+							<key>patterns</key>
+							<array>
+								<dict>
+									<key>include</key>
+									<string>#code</string>
+								</dict>
+							</array>
+						</dict>
 					</array>
 				</dict>
 				<dict>
