--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>fileTypes</key>
@@ -41,7 +41,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>^\s*(package)\b(?:\s*([^ ;$]+)\s*(;)?)?</string>
+			<string>^\s*(package)\b(?:\s*([^ ;$]+)\s*(;)?$\n?)?</string>
 			<key>name</key>
 			<string>meta.package.java</string>
 		</dict>
@@ -65,7 +65,7 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>^\s*(import)\b(?:\s*([^ ;$]+)\s*(;)?)?</string>
+			<string>^\s*(import)\b(?:\s*([^ ;$]+)\s*(;)?$\n?)?</string>
 			<key>name</key>
 			<string>meta.import.java</string>
 		</dict>
@@ -151,7 +151,7 @@
 						</dict>
 						<dict>
 							<key>include</key>
-							<string>#values</string>
+							<string>#code</string>
 						</dict>
 						<dict>
 							<key>match</key>
@@ -246,19 +246,6 @@
 						<dict>
 							<key>include</key>
 							<string>#code</string>
-						</dict>
-						<dict>
-							<key>begin</key>
-							<string>\(</string>
-							<key>end</key>
-							<string>\)</string>
-							<key>patterns</key>
-							<array>
-								<dict>
-									<key>include</key>
-									<string>#code</string>
-								</dict>
-							</array>
 						</dict>
 					</array>
 				</dict>
