• punctuation.definition.seperator.java → punctuation.definition.seperator.property.java
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@10151 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -157,7 +157,7 @@
 							<key>match</key>
 							<string>,</string>
 							<key>name</key>
-							<string>punctuation.definition.seperator.java</string>
+							<string>punctuation.definition.seperator.property.java</string>
 						</dict>
 					</array>
 				</dict>
