• punctuation.definition.class.end.java → punctuation.section.class.end.java
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@10152 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -285,7 +285,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>punctuation.definition.class.end.java</string>
+					<string>punctuation.section.class.end.java</string>
 				</dict>
 			</dict>
 			<key>name</key>
