keyword.operator.new.java → keyword.control.new.java
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@10160 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -178,7 +178,7 @@
 				<key>0</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.new.java</string>
+					<string>keyword.control.new.java</string>
 				</dict>
 			</dict>
 			<key>end</key>
