• Renamed 'keyword.operator.terminator.java' to 'punctuation.terminator.java'
(missed some in previous attempt to fix this)

git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/Java.tmbundle@10161 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -37,7 +37,7 @@
 				<key>3</key>
 				<dict>
 					<key>name</key>
-					<string>keyword.operator.terminator.java</string>
+					<string>punctuation.terminator.java</string>
 				</dict>
 			</dict>
 			<key>match</key>
@@ -626,7 +626,7 @@
 					<key>match</key>
 					<string>;</string>
 					<key>name</key>
-					<string>keyword.operator.terminator.java</string>
+					<string>punctuation.terminator.java</string>
 				</dict>
 			</array>
 		</dict>
