Re-use the '#object-type' definition when matching the class in `new` calls.
Classes with generic information where not being picked up by the previous pattern.

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@10340 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -230,22 +230,35 @@
 				</dict>
 				<dict>
 					<key>begin</key>
-					<string>(\w+)\s*\(</string>
-					<key>beginCaptures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>storage.type.java</string>
-						</dict>
-					</dict>
+					<string>(?=\w.*\()</string>
 					<key>end</key>
-					<string>\)</string>
+					<string>(?&lt;=\))</string>
 					<key>patterns</key>
 					<array>
 						<dict>
 							<key>include</key>
-							<string>#code</string>
+							<string>#object-types</string>
+						</dict>
+						<dict>
+							<key>begin</key>
+							<string>\(</string>
+							<key>beginCaptures</key>
+							<dict>
+								<key>1</key>
+								<dict>
+									<key>name</key>
+									<string>storage.type.java</string>
+								</dict>
+							</dict>
+							<key>end</key>
+							<string>\)</string>
+							<key>patterns</key>
+							<array>
+								<dict>
+									<key>include</key>
+									<string>#code</string>
+								</dict>
+							</array>
 						</dict>
 					</array>
 				</dict>
