--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -646,7 +646,7 @@
 		<key>methods</key>
 		<dict>
 			<key>begin</key>
-			<string>(?=\w)(?![^{]*;)(?!.*//)(?!.*=)(?=.*\()</string>
+			<string>(?!new)(?=\w)(?![^{]*;)(?!.*//)(?!.*=)(?=.*\()</string>
 			<key>beginCaptures</key>
 			<dict>
 				<key>1</key>
