• Include a new repository element #parens which is simply a begin of ')' and end of ')' with #code included in the middle.
Some patterns are looking for and end ')', when a method was being called in one of these patterns, the closing ')' of the method call was terminating the pattern. 

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@10508 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -442,6 +442,10 @@
 				</dict>
 				<dict>
 					<key>include</key>
+					<string>#parens</string>
+				</dict>
+				<dict>
+					<key>include</key>
 					<string>#constants-and-special-vars</string>
 				</dict>
 				<dict>
@@ -857,6 +861,20 @@
 					<string>\w+</string>
 					<key>name</key>
 					<string>variable.parameter.java</string>
+				</dict>
+			</array>
+		</dict>
+		<key>parens</key>
+		<dict>
+			<key>begin</key>
+			<string>\(</string>
+			<key>end</key>
+			<string>\)</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>include</key>
+					<string>#code</string>
 				</dict>
 			</array>
 		</dict>
