• Allow for type specifications of variables where the type looks like a constant to be matched as a type.
e.g. `ID id = new ID();`

The first ID should be matched as a type, not a constant, and now is.

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@10542 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -573,7 +573,7 @@
 						</dict>
 					</dict>
 					<key>match</key>
-					<string>(\.)?\b([A-Z][A-Z0-9_]+)(?!&lt;|\.class)\b</string>
+					<string>(\.)?\b([A-Z][A-Z0-9_]+)(?!&lt;|\.class|\s*\w+\s*=)\b</string>
 					<key>name</key>
 					<string>constant.other.java</string>
 				</dict>
