• Improve the symbol list.
Inner classes are now indented in the symbol list up to 2 levels. Methods are also indented under the class they are defined in.

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@10705 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -356,6 +356,8 @@
 					</dict>
 					<key>match</key>
 					<string>(class|(?:@)?interface)\s+(\w+)</string>
+					<key>name</key>
+					<string>meta.class.identifier.java</string>
 				</dict>
 				<dict>
 					<key>begin</key>
