--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>fileTypes</key>
@@ -182,7 +182,7 @@
 				</dict>
 			</dict>
 			<key>end</key>
-			<string>(?=\s*$|;|,|\)|})</string>
+			<string>(?&lt;=\))(?!\s*{)|(?&lt;=})</string>
 			<key>patterns</key>
 			<array>
 				<dict>
