• add snippet for the ‘main’ Java method
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@10760 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -47,6 +47,7 @@
 					<string>E9ED01EA-E83B-4322-BD9D-39C88FB8C237</string>
 					<string>B8E49466-FCBE-4053-AEC3-4ABBE0FF2FEF</string>
 					<string>16D51B5E-56BC-4ED0-84FB-FCC68479BE8E</string>
+					<string>90A0278A-56B2-465B-B629-A01DF6524FEA</string>
 					<string>------------------------------------</string>
 					<string>3621828B-39DB-4B56-8300-DD5C76333868</string>
 					<string>8CD02FE6-B5EE-4335-AFDF-7CC02C969563</string>
