--- a/info.plist
+++ b/info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
@@ -7,7 +7,12 @@
 	<key>contactName</key>
 	<string>Luke Daley</string>
 	<key>deleted</key>
-	<array/>
+	<array>
+		<string>923B569C-8B6A-49B6-AB91-3D35609F01E4</string>
+		<string>FC40FDBA-EEB6-43FD-9D58-A1D0F116CEC1</string>
+		<string>2D3EC03E-6DFB-11D9-91EB-000D93589AF6</string>
+		<string>2D3EF41B-6DFB-11D9-91EB-000D93589AF6</string>
+	</array>
 	<key>description</key>
 	<string>A bundle for the &lt;a href="http://java.sun.com/"&gt;Java&lt;/a&gt; programming language.</string>
 	<key>mainMenu</key>
