• Snippets for writing to System.out.
p⇥ - System.out.print(‸);
pl⇥ - System.out.println(‸);

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11208 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -24,6 +24,9 @@
 			<string>------------------------------------</string>
 			<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 			<string>------------------------------------</string>
+			<string>5F390B93-6A28-4EED-B04A-D213640B9DAF</string>
+			<string>DFD7AE0D-D5CC-4FFF-B37D-EA7ACC8E34DF</string>
+			<string>------------------------------------</string>
 			<string>9EDF163F-3AB5-4FB5-90CD-DBE38005D082</string>
 			<string>94F55660-EB8B-49FE-BF82-56ACC0A5DDD2</string>
 			<string>FA8BC93C-87AC-4E8D-A1A8-30E22436C874</string>
@@ -186,6 +189,9 @@
 		<string>C80430E0-F37F-448F-ACAE-D590C96C4EAD</string>
 		<string>3DF1A808-53F2-4F48-BD56-1F2D20A0BFE5</string>
 		<string>CE7A14F3-025B-4334-8F40-881CF820A9EE</string>
+		<string>90A0278A-56B2-465B-B629-A01DF6524FEA</string>
+		<string>DFD7AE0D-D5CC-4FFF-B37D-EA7ACC8E34DF</string>
+		<string>5F390B93-6A28-4EED-B04A-D213640B9DAF</string>
 	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
