• Support ‘implements’ declarations over multiple lines.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11291 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -398,7 +398,7 @@
 						</dict>
 					</dict>
 					<key>end</key>
-					<string>(?=\s*extends|$|\{)</string>
+					<string>(?=\s*extends|\{)</string>
 					<key>name</key>
 					<string>meta.definition.class.implemented.interfaces.java</string>
 					<key>patterns</key>
