• Recognise code outside of class declarations.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11334 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -67,15 +67,7 @@
 		</dict>
 		<dict>
 			<key>include</key>
-			<string>#comments</string>
-		</dict>
-		<dict>
-			<key>include</key>
-			<string>#annotations</string>
-		</dict>
-		<dict>
-			<key>include</key>
-			<string>#class</string>
+			<string>#code</string>
 		</dict>
 	</array>
 	<key>repository</key>
