• Simple JSP support.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11335 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>contactEmailRot13</key>
@@ -140,6 +140,7 @@
 	<array>
 		<string>2B449DF6-6B1D-11D9-94EC-000D93589AF6</string>
 		<string>2A28E50A-6B1D-11D9-8689-000D93589AF6</string>
+		<string>ACB58B55-9437-4AE6-AF42-854995CF51DF</string>
 		<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
 		<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
