• Reintroduce class declarations to the top level of source.
(fixes regression introduced in r11334)

git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11386 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -465,6 +465,10 @@
 					<string>#comments</string>
 				</dict>
 				<dict>
+					<key>include</key>
+					<string>#class</string>
+				</dict>
+				<dict>
 					<key>begin</key>
 					<string>{</string>
 					<key>end</key>
