--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -827,7 +827,7 @@
 					<key>begin</key>
 					<string>\b((?:[a-z]\w*\.)*[A-Z]+\w*)&lt;</string>
 					<key>end</key>
-					<string>&gt;|[^\w\s,&lt;]</string>
+					<string>&gt;|[^\w\s,&lt;\[\]]</string>
 					<key>name</key>
 					<string>storage.type.generic.java</string>
 					<key>patterns</key>
@@ -842,7 +842,7 @@
 							<key>comment</key>
 							<string>This is just to support &lt;&gt;'s with no actual type prefix</string>
 							<key>end</key>
-							<string>&gt;|[^\w\s,&lt;]</string>
+							<string>&gt;|[^\w\s,\[\]&lt;]</string>
 							<key>name</key>
 							<string>storage.type.generic.java</string>
 						</dict>
