• Be more restrictive on what can proceed ‘class’ in a class declaration to avoid false positives.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11412 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -309,7 +309,7 @@
 		<key>class</key>
 		<dict>
 			<key>begin</key>
-			<string>(?=\w?[^=;]*(?:class|(?:@)?interface|enum)\s+\w+)</string>
+			<string>(?=\w?[\w\s]*(?:class|(?:@)?interface|enum)\s+\w+)</string>
 			<key>end</key>
 			<string>}</string>
 			<key>endCaptures</key>
