• If the method is abstract or native, don't require a body to make a match.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11496 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -741,15 +741,7 @@
 		<key>methods</key>
 		<dict>
 			<key>begin</key>
-			<string>(?!new)(?=\w)(?![^{]*;)(?!.*//)(?!.*=)(?=.*\()</string>
-			<key>beginCaptures</key>
-			<dict>
-				<key>1</key>
-				<dict>
-					<key>name</key>
-					<string>storage.modifier.java</string>
-				</dict>
-			</dict>
+			<string>(?!new)(?=\w)(?:(?=abstract|native)|(?![^{]*;))(?!.*//)(?!.*=)(?=.*\()</string>
 			<key>end</key>
 			<string>}|(?=;)</string>
 			<key>name</key>
