--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -741,7 +741,7 @@
 		<key>methods</key>
 		<dict>
 			<key>begin</key>
-			<string>(?!new)(?=\w+\s+)(?=[^=]+\()</string>
+			<string>(?!new)(?=\w.*\s+)(?=[^=]+\()</string>
 			<key>end</key>
 			<string>}|(?=;)</string>
 			<key>name</key>
