• Include ? as a valid char in a generic type signature.
git-svn-id: http://svn.textmate.org/trunk/Bundles/Java.tmbundle@11563 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -819,7 +819,7 @@
 					<key>begin</key>
 					<string>\b((?:[a-z]\w*\.)*[A-Z]+\w*)&lt;</string>
 					<key>end</key>
-					<string>&gt;|[^\w\s,&lt;\[\]]</string>
+					<string>&gt;|[^\w\s,\?&lt;\[\]]</string>
 					<key>name</key>
 					<string>storage.type.generic.java</string>
 					<key>patterns</key>
