Created "Organize Imports" command.

--- a/info.plist
+++ b/info.plist
@@ -23,6 +23,7 @@
 		<array>
 			<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
 			<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
+			<string>E330E2EF-0057-4920-9364-01604C67E664</string>
 			<string>------------------------------------</string>
 			<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 			<string>------------------------------------</string>
@@ -145,6 +146,7 @@
 		<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
 		<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
+		<string>E330E2EF-0057-4920-9364-01604C67E664</string>
 		<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
 		<string>56C938B4-22B8-45F4-8E09-5BB4DE4633B0</string>
 		<string>8E765795-CC9D-46D7-8602-7E2DBB7026B2</string>
