Some changes to the JUnit report stuff.

--- a/info.plist
+++ b/info.plist
@@ -173,8 +173,12 @@
 		<string>7396532C-3567-4BDA-9C10-51454A2F2F6D</string>
 		<string>E4DACBFB-F029-4EC3-BB0D-BEF0D5369DA7</string>
 		<string>F050CAEB-56AB-40A7-846B-E5DB70FA0A90</string>
+		<string>B0D0C4D8-76C9-4A8C-A433-F1DD80B0D7BA</string>
 		<string>CE3059F1-EBFE-426B-A98A-7D935580F915</string>
+		<string>0B4781CD-A8C9-4E5A-9D6A-570E9860323F</string>
 		<string>F0C15D98-790E-4755-A04E-B8903D50F5C6</string>
+		<string>C90BD4F2-B973-4D8D-AA71-D0AA4A1F7BF7</string>
+		<string>E9F61E6B-6821-4CFC-9FEF-946141E9F846</string>
 		<string>96251D07-2F30-4610-9F0F-65DE730CC0B5</string>
 		<string>097F4236-D7A4-412F-A078-11ABFCAFC7BA</string>
 		<string>F2C18E05-A7E7-4898-8CB5-CC7E6020AAFE</string>
@@ -197,6 +201,7 @@
 		<string>90A0278A-56B2-465B-B629-A01DF6524FEA</string>
 		<string>DFD7AE0D-D5CC-4FFF-B37D-EA7ACC8E34DF</string>
 		<string>5F390B93-6A28-4EED-B04A-D213640B9DAF</string>
+		<string>F9C0BBAD-4F7A-4D72-9179-508B11AC3CC8</string>
 	</array>
 	<key>uuid</key>
 	<string>4677FEB2-6227-11D9-BFB1-000D93589AF6</string>
