--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -213,7 +213,7 @@
 						</dict>
 					</dict>
 					<key>end</key>
-					<string>}|(?=;|\))</string>
+					<string>}|(?=\s*(?:;|\)))</string>
 					<key>patterns</key>
 					<array>
 						<dict>
