--- a/info.plist
+++ b/info.plist
@@ -147,6 +147,7 @@
 		<string>752A2A98-EB02-4A4D-A3D4-522485DBF491</string>
 		<string>4BC99514-9BF7-4F4F-BD84-7AD07EB81AC3</string>
 		<string>BED53D9E-7A4D-42A7-8A3F-E633973A6D14</string>
+		<string>CBFE854E-917E-4ED5-BDBC-950C6B25B816</string>
 		<string>CE007C8C-9A0B-43B8-AEAF-45613BCD3DF7</string>
 		<string>E330E2EF-0057-4920-9364-01604C67E664</string>
 		<string>BD7A6DBE-0180-4E1A-A428-14D44BD88F88</string>
