Fix for object arrays as parameters.
e.g. this(«new URL[0]», parent);

--- a/Syntaxes/Java.plist
+++ b/Syntaxes/Java.plist
@@ -213,7 +213,7 @@
 						</dict>
 					</dict>
 					<key>end</key>
-					<string>}|(?=\s*(?:;|\)))</string>
+					<string>}|(?=\s*(?:,|;|\)))</string>
 					<key>patterns</key>
 					<array>
 						<dict>
