All uncomment for java props to work with !
Comments in Java Properties can start with either `#` or `!`. Ensure that
when the insertion point is in a line starting with `!` that ⌘/ removes the
`!` as expected.

--- a/info.plist
+++ b/info.plist
@@ -191,6 +191,7 @@
 		<string>94C09B88-AC93-4045-86D1-206639D582D0</string>
 		<string>592F2823-7A2B-4881-99A4-7A18D3623902</string>
 		<string>FBA964F9-EA31-44D1-A5FD-AE8AB3FF8954</string>
+		<string>5E93EDDD-3A87-4647-9EB7-05A9D2525D65</string>
 		<string>E352855B-4C90-4CEB-A9DA-683E658BF3E9</string>
 		<string>20E93106-18CF-4BA3-9DA3-8F0C955DB774</string>
 		<string>FA4CD3FA-A79B-43E3-A432-DA53DA4A060D</string>
