--- a/Syntaxes/JavaProperties.plist
+++ b/Syntaxes/JavaProperties.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>fileTypes</key>
@@ -22,7 +22,21 @@
 				</dict>
 			</dict>
 			<key>match</key>
-			<string>([#!])(.+)?$\n?</string>
+			<string>(!)(.+)?$\n?</string>
+			<key>name</key>
+			<string>comment.line.bang.java-props</string>
+		</dict>
+		<dict>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.comment.java-props</string>
+				</dict>
+			</dict>
+			<key>match</key>
+			<string>(#)(.+)?$\n?</string>
 			<key>name</key>
 			<string>comment.line.number-sign.java-props</string>
 		</dict>
